# verifiable-accounting

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENVIRONMENT  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
crates/accounting/: Cargo.toml
crates/accounting/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bsv/: Cargo.toml
crates/bsv/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commit/benches/: commit_benches.rs
crates/merkle/: Cargo.toml
crates/merkle/benches/: merkle_benches.rs
crates/merkle/src/: lib.rs
crates/proofstore/: Cargo.toml
crates/proofstore/src/: lib.rs
crates/simstore/: Cargo.toml
crates/simstore/src/: main.rs
crates/simstudy/: Cargo.toml
crates/simstudy/src/: main.rs
crates/zk/: Cargo.toml
crates/zk/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  REPRODUCIBILITY.md  SECURITY.md
examples/: sample_leaves.json
examples/integration/: README.md  anchor-record-batch.md  bridge.py  channel-verify.md  full_stack_demo.py  sample_channel_ledger.json  sample_settlement_ledger.json  settlement-verify.md  tea-anchor.md
examples/realistic_quarter/: README.md  ar_rollforward.json  bundle_invoice_017.json  bundle_record_017.json  generate.py  notes.json  records.json
legacy/: README.md
legacy/crates/commit/: Cargo.toml
legacy/crates/commit/src/: lib.rs
legacy/crates/zk/benches/: zk_benches.rs
legacy/examples/: sample_bundle.json
vectors/commit/: h_tag_v1.json
vectors/merkle/: bsv_block_170_v1.json  bsv_block_v1.json  genesis_v1.json
vectors/study/: simstudy_200.json  storage_1024.json
