[workspace]
resolver = "2"
members = [
    "crates/bsv",
    "crates/merkle",
    "crates/proofstore",
    "crates/commit",
    "crates/zk",
    "crates/accounting",
    "crates/api",
    "crates/cli",
    "crates/simstore",
    "crates/simstudy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Craig Wright <cw881@exeter.ac.uk>"]
license = "MIT"
repository = ""
publish = false

[workspace.dependencies]
# Hashing
sha2 = "0.10"
hex = "0.4"
# Randomness (deterministic for vectors / property tests)
rand = "0.8"
rand_chacha = "0.3"
# BSV / secp256k1 — pinned ranges; exact versions resolved by Cargo.lock
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
secp256k1-zkp = { version = "0.11" }  # Blockstream's libsecp256k1-zkp: Pedersen + Bulletproofs on secp256k1
# BSV / Bitcoin types (txid, block header, Merkle, script) — BSV library choice pinned in docs/DECISIONS.md
# bitcoin = "0.32"                 # candidate; replace if a maintained BSV-specific Rust library is preferred
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
hex-literal = "0.4"
# Errors
thiserror = "1"
anyhow = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# Testing
proptest = "1"
# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
