[package]
name = "vaa-accounting"
description = "Accounting equation library and validity rules. Records mapped to data items anchored on BSV; equations checked by recomputation over the anchored records."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
