[package]
name = "vaa-api"
description = "Verifier-facing query/retrieval interface composing the merkle, proofstore, commit, zk, and accounting layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vaa-bsv = { path = "../bsv" }
vaa-merkle = { path = "../merkle" }
vaa-proofstore = { path = "../proofstore" }
vaa-commit = { path = "../commit" }
vaa-zk = { path = "../zk" }
vaa-accounting = { path = "../accounting" }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = [
    "dep:serde",
    "vaa-bsv/serde",
    "vaa-merkle/serde",
    "vaa-proofstore/serde",
    "vaa-commit/serde",
    "vaa-zk/serde",
    "vaa-accounting/serde",
]

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
