[package]
name = "vaa-api"
description = "Verifier-facing query/retrieval interface composing the merkle, proofstore, and accounting layers over BSV."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vaa-bsv = { path = "../bsv" }
vaa-merkle = { path = "../merkle" }
vaa-proofstore = { path = "../proofstore" }
vaa-accounting = { path = "../accounting" }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = [
    "dep:serde",
    "vaa-bsv/serde",
    "vaa-merkle/serde",
    "vaa-proofstore/serde",
    "vaa-accounting/serde",
]
