[package]
name = "vaa-cli"
description = "vaa command-line interface: selftest, reproduce, anchor, prove, verify, query."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "vaa"
path = "src/main.rs"

[dependencies]
vaa-api = { path = "../api" }
vaa-bsv = { path = "../bsv" }
vaa-merkle = { path = "../merkle" }
vaa-proofstore = { path = "../proofstore" }
vaa-accounting = { path = "../accounting" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
