[package]
name = "vaa-merkle"
description = "Merkle Proof Entity (WO 2022/100946 A1) over the BSV block Merkle tree: construction, proof generation, and verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vaa-bsv = { path = "../bsv" }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "vaa-bsv/serde"]

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "merkle_benches"
harness = false
